@@ -112,6 +112,13 @@ picture was taken by N/A
     instructing the system that you no longer want to maintain a minimal
     installation (<quote>minimal base system</quote>).
    </para>
+   <para>
+    Also, <literal>SuSEfirewall2</literal> and <literal>yast2</literal> have been removed from the 
+    <quote>minimal base system</quote>
+    as it requires a full Perl installation and it would not be
+    necessary in all contexts. If you need it you may select 
+    <literal>SuSEfirewall2</literal> or <literal>patterns-openSUSE-yast2_basis</literal>.
+   </para>
   </section>
 
   <section id="sec.123.uefi">
