@@ -1,4 +1,5 @@
-- New entries: CUPS (bsc#951596)
+- New entries: CUPS (bsc#951596); Warn about minimal install not having
+  yast or susefirewall (bsc#951866).
 - Removed entries: grep update (bsc#932494); openSUSE Leap as Guest in
   VirtualBox (bsc#952019).
 
